// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React-Query fetcher: custom-mapper Should generate query correctly with external mapper 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
    useMutation<TTestMutation, unknown, TTestMutationVariables>(
    myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
  );"
`;

exports[`React-Query fetcher: custom-mapper Should generate query correctly with internal mapper 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
    useMutation<TTestMutation, unknown, TTestMutationVariables>(
    myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
  );"
`;

exports[`React-Query fetcher: fetch Should generate query and mutation correctly 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (dataSource: { endpoint: string, fetchParams?: RequestInit }, variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (dataSource: { endpoint: string, fetchParams?: RequestInit }, variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    options
  );"
`;

exports[`React-Query fetcher: graphql-request Should generate query correctly with client 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (client: GraphQLClient, variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(client, TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (client: GraphQLClient, variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(client, TestDocument, variables),
    options
  );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
);"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
);"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from env var 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
);"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from just identifier 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = (variables?: TTestQueryVariables, options?: UseQueryOptions<TTestQuery>) => 
  useQuery<TTestQuery>(
    ['test', variables],
    fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    options
  );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = (variables?: TTestMutationVariables, options?: UseMutationOptions<TTestMutation, unknown, TTestMutationVariables>) => 
  useMutation<TTestMutation, unknown, TTestMutationVariables>(
    fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables),
    options
);"
`;
